# news-aggregator-finalproject-sqr

./: .gitignore  README.md  docker-compose.performance.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-backend.yml  ci.yml  performance.yml
backend/: fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  bookmarks.py  news.py
backend/app/core/: cache.py  config.py  error.py  firebase.py  middleware.py  rate_limiter.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/models/: schemas.py
backend/app/services/: auth.py  news.py
backend/tests/e2e/: test_api.py
backend/tests/unit/: conftest.py  test_auth_service.py  test_bookmarks.py  test_cache.py  test_config.py  test_middleware.py  test_models.py  test_news.py  test_news_service.py  test_rate_limiter.py
streamlit/: pyproject.toml
streamlit/src/: base.py  home.py
streamlit/src/components/: article_card.py
streamlit/src/pages/: bookmarks.py  search.py  settings.py
streamlit/src/utils/: __init__.py  api.py  auth.py  config.py  firebase.py
streamlit/tests/: test_api_utils.py  test_article_card.py  test_auth.py  test_base.py  test_bookmarks.py  test_firebase.py  test_home.py  test_search.py  test_settings.py  test_ui.py
test_performance/: k6.js
