[tool.poetry]
name = "news-aggregator"
version = "0.1.3"
description = "AI-powered news aggregator with user authentication and customization"
authors = ["Haidar Jbeily <haidarjbeily@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.27.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.18"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
firebase-admin = "^6.4.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.3"
aiosqlite = "^0.19.0"
email-validator = "^2.1.0"
cachetools = "^5.3.2"
greenlet = "^3.0.3"
newsapi-python = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
bandit = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing" 