[tool.poetry]
name = "news-aggregator-streamlit"
version = "0.1.1"
description = ""
authors = ["HaidarJbeily7 <h.jbeily@innopolis.university>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "1.28.0"
httpx = "0.26.0"
firebase-admin = "6.4.0"
python-dotenv = "1.0.0"
# Pin to an earlier version of pydantic that doesn't have issues with pydantic-core 2.16.1
# pydantic = "2.5.2"
# requests = "2.31.0"
# streamlit-cookies-manager = { version = "0.2.0", python = ">=3.12,<4.0" }
streamlit-option-menu = "0.3.2"
# Using a newer version of Pillow that supports PEP 517 builds properly
pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-cov = "^4.1.0"
pytest-asyncio = ">=0.26.0"
anyio = ">=4.9.0"
flake8 = "^7.0.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools>=42.0.0", "wheel", "cython>=3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing" 